<resources>
    <string name="app_name">Действия калькулятора</string>
    <string name="key0">0</string>
    <string name="key1">1</string>
    <string name="key2">2</string>
    <string name="key3">3</string>
    <string name="key4">4</string>
    <string name="key5">5</string>
    <string name="key6">6</string>
    <string name="key7">7</string>
    <string name="key8">8</string>
    <string name="key9">9</string>
    <string name="keyPoint">.</string>
    <string name="tcell00">0</string>
    <string name="keyFinal">=</string>
    <string name="keyMltiplication">*</string>
    <string name="keySubtraction">-</string>
    <string name="keyAddition">+</string>
    <string name="keyDivision">/</string>
    <string name="keyPercent">%</string>
    <string name="keySign">+/-</string>
    <string name="keyСlear">C</string>
    <string name="fildClear"> </string>


</resources>
