<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root"
    android:orientation="vertical"
    android:background="@color/colorGray"

    >

    <LinearLayout
        android:id="@+id/row0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        android:weightSum="4"
        >


        <TextView
            android:id="@+id/cell00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="4"
            android:background="@color/colorFon"
            android:gravity="end"
            android:text="@string/tcell00"
            android:textSize="70dp"
            android:textColor="@color/colorWhite"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/row1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/row0"
        android:weightSum="4"
        >


        <Button
            android:id="@+id/keyСlear"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/colorKey"
            android:gravity="center"
            android:text="@string/keyСlear"
            android:textSize="40dp"
            android:onClick="onClick"
            />

        <Button
            android:id="@+id/keySign"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/colorKey"
            android:gravity="center"
            android:text="@string/keySign"
            android:textSize="40dp"
            android:onClick="onClick"
            />

        <Button
            android:id="@+id/keyPercent"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/colorKey"
            android:gravity="center"
            android:text="@string/keyPercent"
            android:textSize="40dp"
            android:onClick="onClick"
            />

        <Button
            android:id="@+id/keyDivision"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/colorOperetion"
            android:gravity="center"
            android:text="@string/keyDivision"
            android:textSize="40dp"
            android:onClick="onClick"
            />

    </LinearLayout>



    <LinearLayout
        android:id="@+id/row2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/row1"
        android:weightSum="4"
        >


        <Button
            android:id="@+id/key7"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/colorKey"
            android:gravity="center"
            android:text="@string/key7"
            android:textSize="40dp"
            android:onClick="onClick"
            />

        <Button
            android:id="@+id/key8"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/colorKey"
            android:gravity="center"
            android:text="@string/key8"
            android:textSize="40dp"
            android:onClick="onClick"
            />

        <Button
            android:id="@+id/key9"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/colorKey"
            android:gravity="center"
            android:text="@string/key9"
            android:textSize="40dp"
            android:onClick="onClick"
            />

        <Button
            android:id="@+id/keyMltiplication"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/colorOperetion"
            android:gravity="center"
            android:text="@string/keyMltiplication"
            android:textSize="40dp"
            android:onClick="onClick"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/row3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/row2"
        android:weightSum="4"
        >


        <Button
            android:id="@+id/key4"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/colorKey"
            android:gravity="center"
            android:text="@string/key4"
            android:textSize="40dp"
            android:onClick="onClick"
            />

        <Button
            android:id="@+id/key5"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/colorKey"
            android:gravity="center"
            android:text="@string/key5"
            android:textSize="40dp"
            android:onClick="onClick"
            />

        <Button
            android:id="@+id/key6"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/colorKey"
            android:gravity="center"
            android:text="@string/key6"
            android:textSize="40dp"
            android:onClick="onClick"
            />

        <Button
            android:id="@+id/keySubtraction"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/colorOperetion"
            android:gravity="center"
            android:text="@string/keySubtraction"
            android:textSize="40dp"
            android:onClick="onClick"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/row3"
        android:weightSum="4"
        >

        <Button
            android:id="@+id/key1"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/colorKey"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/key1"
            android:textSize="40dp"
            />

        <Button
            android:id="@+id/key2"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/colorKey"
            android:gravity="center"
            android:text="@string/key2"
            android:textSize="40dp"
            android:onClick="onClick"
            />

        <Button
            android:id="@+id/key3"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/colorKey"
            android:gravity="center"
            android:text="@string/key3"
            android:textSize="40dp"
            android:onClick="onClick"
            />

        <Button
            android:id="@+id/keyAddition"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/colorOperetion"
            android:gravity="center"
            android:text="@string/keyAddition"
            android:textSize="40dp"
            android:onClick="onClick"
            />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/row5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/row4"
        android:weightSum="4"
        >

        <Button
            android:id="@+id/key0"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_margin="1dp"
            android:layout_weight="2"
            android:background="@color/colorKey"
            android:gravity="center"
            android:text="@string/key0"
            android:textSize="40dp"
            android:onClick="onClick"
            />

        <Button
            android:id="@+id/keyPoint"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/colorKey"
            android:gravity="center"
            android:text="@string/keyPoint"
            android:textSize="40dp"
            android:onClick="onClick"
            />

        <Button
            android:id="@+id/keyFinal"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/colorOperetion"
            android:gravity="center"
            android:text="@string/keyFinal"
            android:textSize="40dp"
            android:onClick="onClick"
            />
    </LinearLayout>

</RelativeLayout>


